--- a/src/web/lnote/templates/index.html
+++ b/src/web/lnote/templates/index.html
@@ -1,1 +1,151 @@
-lnote index
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>lhsNote</title>
+    <!-- 新 Bootstrap 核心 CSS 文件 -->
+    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: rgb(127, 187, 255);
+        }
+
+        .panel {
+            width: 210x !important;
+            margin: 20px !important;
+        }
+
+        #edit-icon {
+            opacity: 0.5 !important;
+        }
+
+        #edit-icon:hover {
+
+            opacity: 2 !important;
+        }
+
+        .glyphicon-trash {
+            opacity: 0.6 !important;
+        }
+
+        .glyphicon-trash:hover {
+            opacity: 1 !important;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-md-12 column">
+                <br>
+
+                <img class="img-responsive img-circle" width="50px" height="50px" src="../static/images/avator.jpeg"
+                    style="float:right" />
+                <h4 id="nickname" style="color:white">HS鬼</h4>
+            </div>
+        </div>
+        <hr>
+
+
+        <div class="row clearfix">
+            <div id="parentDiv" class="col-xs-12">
+                <div class="panel pull-left " style="height: 210px  !important;width:210px !important">
+                    <div style="height:25px !important"><i id="del" href="#delete" data-toggle="modal" class="glyphicon glyphicon-trash btn-sm"
+                        style="float: right;padding:12px !important;"></i></div>
+                    <hr style="filter: alpha(opacity=100,finishopacity=0,style=2)" width="88%" color="#6f5499"
+                        size="10" />
+                    <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal" style="display:block;width:208px;height:140px;padding:0;margin:0;"></a>
+                </div>
+
+                <div class="panel pull-left" style="height: 210px  !important;width:210px !important">
+                    <div style="height:25px !important"><i id="del" href="#delete" data-toggle="modal" class="glyphicon glyphicon-trash btn-sm"
+                        style="float: right;padding:12px !important;"></i></div>
+                    <hr style="filter: alpha(opacity=100,finishopacity=0,style=2)" width="88%" color="#6f5499"
+                        size="10" />
+                        <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal" style="display:block;width:208px;height:140px;padding:0;margin:0;"></a>
+                </div>
+
+                <div class="panel pull-left" style="height: 210px  !important;width:210px !important">
+                    <div style="height:25px !important"><i id="del" href="#delete" data-toggle="modal" class="glyphicon glyphicon-trash btn-sm"
+                            style="float: right;padding:12px !important;"></i></div>
+                    <hr style="filter: alpha(opacity=100,finishopacity=0,style=2)" width="88%" color="#6f5499"
+                        size="10" />
+                    <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal" style="display:block;width:208px;height:140px;padding:0;margin:0;"></a>
+                </div>
+
+
+            </div>
+        </div>
+        <!-- 确认删除弹窗 -->
+            <div class="modal fade" id="delete" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                            <h4 class="modal-title" id="myModalLabel">
+                                确认删除？
+                            </h4>
+                        </div>
+                        <div class="modal-body">
+                                
+                        </div>
+                        <div class="modal-footer">
+                             <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button> <button type="button" class="btn btn-danger">删除</button>
+                        </div>
+                    </div>           
+                </div>              
+            </div>
+            <!-- 确认删除弹窗结束 -->
+        <div class="row clearfix">
+            <div class="col-xs-12">
+                    <!-- 添加笔记弹窗 -->
+                    <div class="modal fade" id="modal-container-523565" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content" style="height:320px !important">
+                                    <div class="modal-header">
+                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                        <h4 class="modal-title" id="myModalLabel">
+                                            笔记标题
+                                        </h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        编辑内容...
+                                    </div>
+                                    <div class="modal-footer navbar-fixed-bottom">
+                                         
+                                    </div>
+                                </div>
+                                
+                            </div>
+                            
+                    </div>
+                      <!-- 添加笔记弹窗结束   -->
+                <div style="text-align:center" class="navbar-fixed-bottom">
+
+                        <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal"><img id="edit-icon" class="img-circle"width=" 100px" height="100px" src="../static/images/加号.png" /></a>
+                    
+                    
+
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+        <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+        <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+        <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script>
+
+        </script>
+</body>
+
+</html>
