--- a/src/web/lnote/templates/index.html
+++ b/src/web/lnote/templates/index.html
@@ -44,7 +44,7 @@
             <div class="col-md-12 column">
                 <br>
 
-                <img class="img-responsive img-circle" width="50px" height="50px" src="../static/images/avator.jpeg"
+                <img class="img-responsive img-circle" width="50px" height="50px" src="images/avator.jpeg"
                     style="float:right" />
                 <h4 id="nickname" style="color:white">HS鬼</h4>
             </div>
