--- a/src/web/lnote/templates/regist.html
+++ b/src/web/lnote/templates/regist.html
@@ -11,7 +11,7 @@
     <style>
         body {
             background-color: rgb(127, 187, 255);
-             background: url("../static/images/bg2.jpg") no-repeat;
+             background: url("/s/images/bg2.jpg") no-repeat;
             height:100%;
             width:100%;
             overflow: hidden !important;
@@ -143,7 +143,7 @@
                       <!-- 注册弹窗结束   -->
                 <div style="text-align:center" class="navbar-fixed-bottom">
 
-                        <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal"><img id="edit-icon" class="img-circle"width=" 100px" height="100px" src="../static/images/加号.png" /></a>
+                        <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal"><img id="edit-icon" class="img-circle"width=" 100px" height="100px" src="/s/images/加号.png" /></a>
 
                 </div>
                 </div>
@@ -159,8 +159,8 @@
 
 
     <!-- 重要两条 -->
-    <link rel="stylesheet" href="../../../script/bootstrapValidator/css/bootstrapValidator.css"/>
-    <script type="text/javascript" src="../../../script/bootstrapValidator/js/bootstrapValidator.js"></script>
+    <link rel="stylesheet" href="/s/css/bootstrapValidator.css"/>
+    <script type="text/javascript" src="/s/js/bootstrapValidator.js"></script>
     <!-- 重要两条 -->
         <script type="text/javascript">
             $(document).ready(function() {          
