--- a/src/web/lnote/templates/index.html
+++ b/src/web/lnote/templates/index.html
@@ -44,7 +44,7 @@
             <div class="col-md-12 column">
                 <br>
 
-                <img class="img-responsive img-circle" width="50px" height="50px" src="images/avator.jpeg"
+                <img class="img-responsive img-circle" width="50px" height="50px" src="/s/images/avator.jpeg"
                     style="float:right" />
                 <h4 id="nickname" style="color:white">HS鬼</h4>
             </div>
@@ -127,7 +127,7 @@
                       <!-- 添加笔记弹窗结束   -->
                 <div style="text-align:center" class="navbar-fixed-bottom">
 
-                        <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal"><img id="edit-icon" class="img-circle"width=" 100px" height="100px" src="../static/images/加号.png" /></a>
+                        <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal"><img id="edit-icon" class="img-circle"width=" 100px" height="100px" src="/s/images/加号.png" /></a>
                     
                     
 
