--- a/src/web/lnote/templates/regist.html
+++ b/src/web/lnote/templates/regist.html
@@ -34,7 +34,7 @@
         }
 
         .glyphicon-trash {
-            opacity: 0.6 !important;
+            opacity: 0.8 !important;
         }
 
         .glyphicon-trash:hover {
@@ -127,7 +127,7 @@
                       <!-- 注册弹窗结束   -->
                 <div style="text-align:center" class="navbar-fixed-bottom">
 
-                        <a id="modal-523565" href="#modal-container-523565" role="button" class="btn" data-toggle="modal"><img id="edit-icon" class="img-circle"width=" 100px" height="100px" src="/s/images/加号.png" /></a>
+                        <a id="modal-523565" href="/login" role="button" class="btn" data-toggle="modal"><img id="edit-icon" class="img-circle"width=" 80px" height="80px" src="/s/images/Power_Switch_User.png" /></a>
 
                 </div>
                 </div>
